<resources>
    <string name="app_name">탈모 계산기</string>

    <string name="q1">1. 두피를 누르면 따끔거리거나 아프다. </string>
    <string name="q2">2. 머리를 자주 긁는다. </string>
    <string name="q3">3. 체모가 갑자기 굵어지고 길어진다</string>
    <string name="q4">4. 이마가 부쩍 넒어지는 느낌이 든다</string>
    <string name="q5">5. 하루에 100개 이상의 머리카락이 빠진다</string>
    <string name="q6">6. 머리가 기름진다 </string>
    <string name="q7">7. 머리카락이 가늘고 힘이 없는거 같다</string>
    <string name="q8">8. 앞뒤 머리카락의 굵기 차이가 큰거 같다</string>
    <string name="q9">9. 100개 정도의 머리카락을 잡아 당기면 5개이상의 머리카락이 빠진다</string>
    <string name="q10">10. 두피에 비듬이 자주 생기며 오래지속 되어 왔다</string>

    <string name="a1">두피를 눌렀을 때 따끔거리거나 아픈 증상이 나타난다면 탈모를 의심해볼 수 있다.
        보통 이런 경우는 세균 감염을 의심해볼 수 있으며, 머리를 감을 때 깨끗이 씻어내기만 하면 증상이 완화될 수 있지만
        통증의 정도가 심해 해당 증상을 가진 많은 사람들이 머리를 감을 때 깨끗이 씻지 못할뿐더러 머리를 감는 것조차 힘들어한다.
        겪어보지 않은 사람은 ‘깨끗이 좀 씻어’라고 가볍게 말할 수 있지만 두피에 조금이라도 힘이 가해지면
        통증이 심해져 결과적으로 머리를 제대로 감을 수 없기 때문에 증상은 날로 악화된다고 한다.</string>

    <string name="a2">최근 들어 머리를 긁는 횟수가 눈에 띄게 늘어나고, 두피에 건조감을 느낀다면 두피 관리에 더욱 신경을 써야 한다.
        두피가 건조해지면 비듬이 많아지고, 비듬으로 인해 간지러운 두피를 긁게 되면 염증이 생겨 탈모로 발전할 수 있다.
        또한 건선이나 모낭염, 지루성피부염 등이 있다면 건강한 두피에 비해 두피가 더 건조할 수 있기 때문에 증상이 심한 경우에는 병원 치료를 동반하는 것이 좋으며,
        증상에 맞는 샴푸 또는 헤어케어 제품을 사용해 더 이상 증상이 악화되는 것을 막아야 한다.</string>

    <string name="a3">이는 남성에 해당하는 증상으로, 수염이나 가슴 털 등 자신의 체모가 갑자기 굵어지고 길어지는 것 같은 느낌이 든다면 탈모를 의심해봐야 한다.
        남성호르몬이 증가하면 수염 등의 체모의 성장 역시 촉진되는데, 문제는 남성호르몬이 증가하면 털은 더 굵게 자라지만 머리카락의 성장은 억제해 머리카락이 많이 빠질 수 있다고 한다.
        따라서 이러한 증상이 나타났을 때는 민간요법 등을 이용해 혼자 해결하려고 하지 말고 빨리 병원을 찾아 정확한 진단 및 치료를 받아야 증상이 악화되는 것을 막을 수 있다</string>

    <string name="a4">이마가 부쩍 넓어진 것 같은 느낌이 든다면 탈모 초기 증상은 아닌지 의심해볼 필요가 있다.
        남성의 경우 자신의 할아버지, 아버지가 탈모가 있다면 특히나 더 가볍게 생각해서는 안 된다. M자 이마처럼 탈모가 진행되면
        이마 쪽 헤어라인이 점점 뒤로 밀리면서 어느 순간부터 이마가 넓어 보인다거나 넓어진 것 같다고 느낄 수 있다.
        이런 증상은 대부분 유전적인 경우가 많기 때문에 자신에게 탈모 가능성이 있다면 매일같이 유심히 살펴보면서 조기에 이러한 증상들을 발견하면 탈모의 속도를 더디게 하거나 악화되는 것을 사전에 막을 수 있다.</string>

    <string name="a5">하루에 100개 이상의 머리카락이 빠지는 증상은 초기 탈모 증상에 해당되는데, 이러한 증상이 지속되면 머리숱은 점점 줄어들게 되고, 머리카락 사이로 보이는 두피는 점점 더 도드라져 보이게 된다.
        이는 남성뿐만 아니라 여성 탈모 환자에게도 많이 나타나는 증상으로, 출산 후 수년이 흘렀음에도 이러한 증상이 더욱 심해진다면 방치하지 말고 병원을 찾아야 한다.
        증상이 나타나기 시작하는 초기에 병원을 찾으면 간단한 치료 방법으로 탈모의 악화를 막고, 증상도 개선할 수 있다고 한다.</string>

    <string name="a6">갑자기 두피에 기름기가 많아지기 시작했다면 역시나 탈모 초기 증상일 수 있으므로 그냥 넘겨서는 안 된다. 이는 두피 피지 분비량이 많아져서 나타나는 증상인데, 문제는 피지 분비량이 많아지면 염증이 생기면서 두피가 상할 수 있다는 것이다.
        특히 이는 지루성 피부염과 관련이 있을 수 있는데, 과도한 피지분비로 두피의 영양 공급이 막히면서 모발이 가늘어지고,
        결과적으로는 탈모로까지 이어질 수 있다. 증상 개선을 위해 두피 케어에 신경 쓰고 머리를 깨끗이 감는 노력을 했음에도 나아지지 않는다면 탈모 전문 병원을 방문해 보자.</string>

    <string name="a7">가늘고 힘이 없는 모발도 탈모를 알리는 신호일 수 있다. 모발 영양 공급에 문제가 생기면 머리카락이 가늘어지고 힘이 없어진다. 이렇게 머리카락에 힘도 없고 굵기 또한 이전보다 얇아지면 빠지기 쉬워 탈모의 가능성이 높아진다.
        이럴 땐 두피와 머리카락에 영양을 공급해줄 수 있는 식품을 꾸준히 섭취하는 것이 중요하다. 탈모를 예방하고 두피와 머리카락을 건강하게 만들어주는 대표적인 음식으로는 달걀, 연어, 굴, 콩, 귀리, 녹황색 채소 등이 있다.</string>
    <string name="a8">유전이나 스트레스 등으로 인해 탈모가 걱정된다면 자신의 앞뒤 머리카락의 굵기를 비교해 보자. 전문가들에 의하면 비교적 뒷머리보다 앞머리의 탈모가 심하다고 한다.
        앞뒤 머리카락을 비교해 보았을 때 앞쪽의 머리카락이 뒤쪽의 머리카락에 비해 굵기가 확연히 가늘고 더 많이 빠진다면 탈모 증상일 수 있으므로 전문가의 상담을 받아볼 필요가 있다.
        이런 경우에는 식생활 개선이나 탈모 제품 사용만으로는 증상 개선이 어렵기 때문에 전문가의 도움이 필요하다.</string>

    <string name="a9">머리카락을 100가닥 정도 잡은 후 아주 가볍게 잡아당겼을 때 5가닥 이상의 머리카락이 빠진다면 역시나 탈모를 의심해볼 수 있다. 사람의 모발의 수는 약 10만 개 정도로, 하루에 50~60개 정도의 머리카락이 빠지는 것은 정상이지만
        머리카락을 가볍게 쓸어내리거나 잡아당기기만 해도 너무나 쉽게 머리카락이 우수수 빠진다면 탈모를 의심해봐야 한다. 정상 모발의 경우에는 거의 빠지지 않기 때문이다. 그냥 두면 탈모가 계속 진행되기 때문에 조기 발견 시 병원을 방문하는 것이 좋다.</string>
    <string name="a10">두피에 비듬이 생긴 지 6개월 이상 되었고, 가려운 증상이 계속된다면 탈모를 의심해봐야 한다. 뿐만 아니라 최근 들어 머리를 긁었을 때 손톱에 비듬이 끼고, 비듬의 상태가 축축한 증상이 나타난 지 얼마 되지 않았다면 이 역시도 탈모의 전조증상일 수 있으므로
        두피 전문 클리닉을 찾아 적정한 치료를 받아야 한다. 갑작스러운 비듬이나 두피, 만성 비듬 증상은 두피 건강을 날이 갈수록 악화시키고, 모발 또한 빠지기 쉬운 상태로 만들기 때문이다.</string>

</resources>