<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ddagum" />

            <TextView
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q2" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/bugbug" />

            <TextView
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q3" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/q3" />

            <TextView
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q4" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/q4" />

            <TextView
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q5" />
            <ImageView
                android:id="@+id/img5"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/losshair" />
            <TextView
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q6" />

            <TextView
                android:id="@+id/answer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/img6"
                android:src="@drawable/oilhair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q7" />
            <ImageView
                android:id="@+id/img7"
                android:src="@drawable/q7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/answer7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q8" />
            <ImageView
                android:id="@+id/img8"
                android:src="@drawable/q8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/answer8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q9" />

            <TextView
                android:id="@+id/answer9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/img9"
                android:src="@drawable/q9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/q10" />
            <ImageView
                android:id="@+id/img10"
                android:src="@drawable/bidum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/answer10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>